Load config at runtime; copy config.json to docs/ on build
- Fetch config.json at runtime (./config.json) instead of bundling
- main.js: load config then provide to app; fallback on fetch error
- useZoomForm: inject appConfig, return localeOptions from composable
- build: cp config.json docs/ after vite build
- dev: copy config.json to public/ so dev server serves it

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node scripts/ensure-config.js && vite",
-    "build": "node scripts/ensure-config.js && vite build",
+    "dev": "node scripts/ensure-config.js && mkdir -p public && cp config.json public/ && vite",
+    "build": "node scripts/ensure-config.js && vite build && cp config.json docs/",
     "preview": "vite preview"
   },
   "dependencies": {
